--- a/toolkit/src/components/cut/filter-bar/filter-group.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter-group.hbs
@@ -18,6 +18,11 @@
         isChecked=@isChecked
         config=@config
       )
+      Search=(component
+        'cut/filter-bar/search'
+        onSearchInput=@onSearchInput
+        onSearchKeyup=@onSearchKeyup
+      )
     )
   }}
 </Hds::SegmentedGroup>
