--- a/documentation/app/templates/components/filter-bar.hbs
+++ b/documentation/app/templates/components/filter-bar.hbs
@@ -61,36 +61,6 @@
       <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
     </Filters.Filter>
   </FB.FilterGroup>
-  {{!-- <FB.SortGroup as |Filters|>
-    <Filters.Filter
-      @name="status"
-      @batch={{true}}
-      @isMultiSelect={{true}}
-      as |F|
-    >
-      <F.ToggleButton @color="secondary" @text="Status" />
-      <F.Checkbox @value="running" @name="Running"><Hds::Badge
-          @text="running"
-          @color="success"
-        /></F.Checkbox>
-      <F.Checkbox @value="warning" @name="Warning"><Hds::Badge
-          @text="warning"
-          @color="warning"
-        /></F.Checkbox>
-      <F.Checkbox @value="critical" @name="Critical"><Hds::Badge
-          @text="critical"
-          @color="critical"
-        /></F.Checkbox>
-    </Filters.Filter>
-    <Filters.Sort as |S|>
-      <S.Checkmark @value="health" @name="critical to healthy">Critical to
-        Healthy</S.Checkmark>
-      <S.Checkmark @value="-health" @name="healthy to critical">
-        Healthy to Critical</S.Checkmark>
-      <S.Checkmark @value="instances" @name="instance count" />
-    </Filters.Sort>
-  </FB.SortGroup> --}}
-
   <FB.Sort as |S|>
     <S.Checkmark @value="health" @name="critical to healthy">Critical to Healthy</S.Checkmark>
     <S.Checkmark @value="-health" @name="healthy to critical">
@@ -102,50 +72,57 @@
 <CodeBlock
   @language="handlebars"
   @code={{{'
-<Cut::FilterBar
-  @config={{this.filters}}
-  @count={{this.count}}
-  @onChange={{this.handleFilterChange}}
-  as |FB|>
-  <FB.Filter @name="clusterID" @listPosition="bottom-left" as |F|>
-    <F.ToggleButton
-      @icon="server-cluster"
-      @text="Cluster ID"
-      @color="secondary"
-    />
-    <F.Checkmark @value={{1}} @name="Cluster One">One</F.Checkmark>
-    <F.Checkmark @value={{2}} @name="Cluster Two">Two</F.Checkmark>
-  </FB.Filter>
-  <FB.Search placeholder="Search for services" />
-  <FB.FilterGroup as |Filters|>
-    <Filters.Filter
-      @name="status"
-      @batch={{true}}
-      @isMultiSelect={{true}}
-      as |F|
-    >
-      <F.ToggleButton @color="secondary" @text="Status" />
-      <F.Checkbox @value="running" @name="Running"><Hds::Badge
-          @text="running"
-          @color="success"
-        /></F.Checkbox>
-      <F.Checkbox @value="warning" @name="Warning"><Hds::Badge
-          @text="warning"
-          @color="warning"
-        /></F.Checkbox>
-      <F.Checkbox @value="critical" @name="Critical"><Hds::Badge
-          @text="critical"
-          @color="critical"
-        /></F.Checkbox>
-    </Filters.Filter>
-    <Filters.Filter @name="type" as |F|>
-      <F.ToggleButton @color="secondary" @text="Type" />
-      <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
-      <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
-      <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
-    </Filters.Filter>
-  </FB.FilterGroup>
-</Cut::FilterBar>
+  <Cut::FilterBar
+    @config={{this.filters}}
+    @count={{this.count}}
+    @onChange={{this.handleFilterChange}}
+    as |FB|>
+    <FB.Filter @name="clusterID" @listPosition="bottom-left" as |F|>
+      <F.ToggleButton
+        @icon="server-cluster"
+        @text="Cluster ID"
+        @color="secondary"
+      />
+      <F.Checkmark @value={{1}} @name="Cluster One">One</F.Checkmark>
+      <F.Checkmark @value={{2}} @name="Cluster Two">Two</F.Checkmark>
+    </FB.Filter>
+
+    <FB.Search placeholder="Search for services" />
+    <FB.FilterGroup as |Filters|>
+      <Filters.Filter
+        @name="status"
+        @batch={{true}}
+        @isMultiSelect={{true}}
+        as |F|
+      >
+        <F.ToggleButton @color="secondary" @text="Status" />
+        <F.Checkbox @value="running" @name="Running"><Hds::Badge
+            @text="running"
+            @color="success"
+          /></F.Checkbox>
+        <F.Checkbox @value="warning" @name="Warning"><Hds::Badge
+            @text="warning"
+            @color="warning"
+          /></F.Checkbox>
+        <F.Checkbox @value="critical" @name="Critical"><Hds::Badge
+            @text="critical"
+            @color="critical"
+          /></F.Checkbox>
+      </Filters.Filter>
+      <Filters.Filter @name="type" as |F|>
+        <F.ToggleButton @color="secondary" @text="Type" />
+        <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
+        <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
+        <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
+      </Filters.Filter>
+    </FB.FilterGroup>
+    <FB.Sort as |S|>
+      <S.Checkmark @value="health" @name="critical to healthy">Critical to Healthy</S.Checkmark>
+      <S.Checkmark @value="-health" @name="healthy to critical">
+        Healthy to Critical</S.Checkmark>
+      <S.Checkmark @value="instances" @name="instance count" />
+    </FB.Sort>
+  </Cut::FilterBar>
 '}}}
 />
 
@@ -166,6 +143,10 @@
         text: 'Nomad',
         value: 'nomad',
       },
+    },
+    sort: {
+      text: 'critical to healthy',
+      value: 'health',
     },
   };
 
@@ -195,3 +176,78 @@
         @color="critical"
       /></F.Checkbox>
   </FB.Filter> }}
+
+<Cut::FilterBar
+  @config={{this.filters}}
+  @count={{this.count}}
+  @onChange={{this.handleFilterChange}}
+  as |FB|
+>
+  <FB.FilterGroup as |Filters|>
+    <Filters.Search placeholder="Search for services" />
+
+    <Filters.Filter
+      @name="status"
+      @batch={{true}}
+      @isMultiSelect={{true}}
+      as |F|
+    >
+      <F.ToggleButton @color="secondary" @text="Status" />
+      <F.Checkbox @value="running" @name="Running"><Hds::Badge
+          @text="running"
+          @color="success"
+        /></F.Checkbox>
+      <F.Checkbox @value="warning" @name="Warning"><Hds::Badge
+          @text="warning"
+          @color="warning"
+        /></F.Checkbox>
+      <F.Checkbox @value="critical" @name="Critical"><Hds::Badge
+          @text="critical"
+          @color="critical"
+        /></F.Checkbox>
+    </Filters.Filter>
+    <Filters.Filter @name="type" as |F|>
+      <F.ToggleButton @color="secondary" @text="Type" />
+      <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
+      <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
+      <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
+    </Filters.Filter>
+  </FB.FilterGroup>
+  <FB.Generic as |functions|>
+    <Hds::Button
+      @text="Generic"
+      @type="button"
+      {{on "click" (fn functions.toggle "foo" "bar" "bar")}}
+    />
+  </FB.Generic>
+  <FB.SortGroup as |Filters|>
+    <Filters.Filter
+      @name="status"
+      @batch={{true}}
+      @isMultiSelect={{true}}
+      as |F|
+    >
+      <F.ToggleButton @color="secondary" @text="Status" />
+      <F.Checkbox @value="running" @name="Running"><Hds::Badge
+          @text="running"
+          @color="success"
+        /></F.Checkbox>
+      <F.Checkbox @value="warning" @name="Warning"><Hds::Badge
+          @text="warning"
+          @color="warning"
+        /></F.Checkbox>
+      <F.Checkbox @value="critical" @name="Critical"><Hds::Badge
+          @text="critical"
+          @color="critical"
+        /></F.Checkbox>
+    </Filters.Filter>
+    <Filters.Sort as |S|>
+      <S.Checkmark @value="health" @name="critical to healthy">Critical to
+        Healthy</S.Checkmark>
+      <S.Checkmark @value="-health" @name="healthy to critical">
+        Healthy to Critical</S.Checkmark>
+      <S.Checkmark @value="instances" @name="instance count" />
+    </Filters.Sort>
+  </FB.SortGroup>
+
+</Cut::FilterBar>
