--- a/toolkit/src/components/cut/filter-bar/filter-group.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter-group.hbs
@@ -17,6 +17,7 @@
         applyFilter=@applyFilter
         isChecked=@isChecked
         config=@config
+        localConfig=@localConfig
       )
       Search=(component
         'cut/filter-bar/search'
