--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -17,6 +17,7 @@
             onSearchKeyup=this.onSearchKeyup
             isChecked=this.isCheckboxChecked
             config=@config
+            localConfig=@localConfig
           )
           Filter=(component
             'cut/filter-bar/filter'
@@ -25,6 +26,7 @@
             applyFilter=this.applyFilter
             isChecked=this.isCheckboxChecked
             config=@config
+            localConfig=@localConfig
           )
           Generic=(component
             'cut/filter-bar/generic'
