--- a/toolkit/src/components/cut/filter-bar/filter/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/index.hbs
@@ -49,6 +49,9 @@
             config=@config
             localConfig=@localConfig
           )
+          FilterInput=(component
+            'cut/filter-bar/filter/filter-input' components=DD
+          )
           CopyItem=DD.CopyItem
           Description=DD.Description
           Interactive=DD.Interactive
@@ -111,6 +114,9 @@
           applyFilter=@applyFilter
           config=@config
           localConfig=@localConfig
+        )
+        FilterInput=(component
+          'cut/filter-bar/filter/filter-input' components=DD
         )
         CopyItem=DD.CopyItem
         Description=DD.Description
