--- a/toolkit/src/components/cut/filter-bar/filter/checkmark.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/checkmark.hbs
@@ -5,7 +5,10 @@
 {{#let @checkmark as |Checkmark|}}
   <Checkmark
     @selected={{this.isChecked}}
-    {{on 'click' (fn @toggle @filterName @name @value false)}}
+    {{on
+      'click'
+      (fn @toggle (hash filterName=@filterName text=@name value=@value))
+    }}
     ...attributes
   >{{yield}}</Checkmark>
 {{/let}}
