Update docs to no specify toggle color

--- a/documentation/app/templates/components/filter-bar.hbs
+++ b/documentation/app/templates/components/filter-bar.hbs
@@ -55,7 +55,7 @@
       @isMultiSelect={{true}}
       as |F|
     >
-      <F.ToggleButton @color="secondary" @text="Status" />
+      <F.ToggleButton @text="Status" />
       <F.Checkbox @value="running" @name="Running"><Hds::Badge
           @text="running"
           @color="success"
@@ -70,13 +70,13 @@
         /></F.Checkbox>
     </Filters.Filter>
     <Filters.Filter @name="type" as |F|>
-      <F.ToggleButton @color="secondary" @text="Type" />
+      <F.ToggleButton @text="Type" />
       <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
       <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
       <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
     </Filters.Filter>
     <Filters.Filter @name="juice" as |F|>
-      <F.ToggleButton @color="secondary" @text="Juice" />
+      <F.ToggleButton @text="Juice" />
       <F.Radio @value="oj" @name="Orange">Orange Juice</F.Radio>
       <F.Radio @value="apple" @name="Apple">Apple Juice</F.Radio>
       <F.Radio @value="lemonade" @name="Lemonade">Lemonade</F.Radio>
@@ -116,7 +116,7 @@
         @isMultiSelect={{true}}
         as |F|
       >
-        <F.ToggleButton @color="secondary" @text="Status" />
+        <F.ToggleButton @text="Status" />
         <F.Checkbox @value="running" @name="Running"><Hds::Badge
             @text="running"
             @color="success"
@@ -131,7 +131,7 @@
           /></F.Checkbox>
       </Filters.Filter>
       <Filters.Filter @name="type" as |F|>
-        <F.ToggleButton @color="secondary" @text="Type" />
+        <F.ToggleButton @text="Type" />
         <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
         <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
         <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
@@ -183,7 +183,7 @@
 
 {{! <FB.Filter as |F|>
 
-    <F.ToggleButton @color="secondary" @text="Status" />
+    <F.ToggleButton @text="Status" />
     <F.Checkbox @value="running"><Hds::Badge
         @text="running"
         @color="success"
@@ -213,7 +213,7 @@
       @isMultiSelect={{true}}
       as |F|
     >
-      <F.ToggleButton @color="secondary" @text="Status" />
+      <F.ToggleButton @text="Status" />
       <F.Checkbox @value="running" @name="Running"><Hds::Badge
           @text="running"
           @color="success"
@@ -244,7 +244,7 @@
       </F.Generic>
     </Filters.Filter>
     <Filters.Filter @name="type" as |F|>
-      <F.ToggleButton @color="secondary" @text="Type" />
+      <F.ToggleButton @text="Type" />
       <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
       <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
       <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
@@ -267,7 +267,7 @@
       @isMultiSelect={{true}}
       as |F|
     >
-      <F.ToggleButton @color="secondary" @text="Status" />
+      <F.ToggleButton @text="Status" />
       <F.Checkbox @value="running" @name="Running"><Hds::Badge
           @text="running"
           @color="success"
