--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -16,7 +16,7 @@
             onSearchKeyup=this.onSearchKeyup
             isChecked=this.isCheckboxChecked
             config=@config
-            localConfig=@localConfig
+            localConfig=this.localConfig
           )
           Filter=(component
             'cut/filter-bar/filter'
@@ -25,7 +25,7 @@
             applyFilter=this.applyFilter
             isChecked=this.isCheckboxChecked
             config=@config
-            localConfig=@localConfig
+            localConfig=this.localConfig
           )
           Generic=(component
             'cut/filter-bar/generic'
