Change isChecked into a simple helper function

--- a/toolkit/src/components/cut/filter-bar/filter/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/index.hbs
@@ -18,6 +18,7 @@
             'cut/filter-bar/filter/checkbox'
             checkbox=DD.Checkbox
             filterName=@name
+            localConfig=@localConfig
             toggle=this.toggle
             applyFilter=@applyFilter
             isChecked=@isChecked
@@ -27,6 +28,7 @@
             'cut/filter-bar/filter/checkmark'
             checkmark=DD.Checkmark
             filterName=@name
+            localConfig=@localConfig
             toggle=this.toggle
             applyFilter=@applyFilter
             isChecked=@isChecked
@@ -36,6 +38,7 @@
             'cut/filter-bar/filter/radio'
             radio=DD.Radio
             filterName=@name
+            localConfig=@localConfig
             toggle=this.toggle
             applyFilter=@applyFilter
             isChecked=@isChecked
@@ -90,6 +93,7 @@
           'cut/filter-bar/filter/checkbox'
           checkbox=DD.Checkbox
           filterName=@name
+          localConfig=@localConfig
           toggle=this.toggle
           applyFilter=@applyFilter
           isChecked=@isChecked
@@ -99,6 +103,7 @@
           'cut/filter-bar/filter/checkmark'
           checkmark=DD.Checkmark
           filterName=@name
+          localConfig=@localConfig
           toggle=this.toggle
           applyFilter=@applyFilter
           isChecked=@isChecked
@@ -108,6 +113,7 @@
           'cut/filter-bar/filter/radio'
           radio=DD.Radio
           filterName=@name
+          localConfig=@localConfig
           toggle=this.toggle
           applyFilter=@applyFilter
           isChecked=@isChecked
