--- a/toolkit/src/components/cut/filter-bar/sort/checkmark.hbs
+++ b/toolkit/src/components/cut/filter-bar/sort/checkmark.hbs
@@ -7,6 +7,7 @@
   <Checkmark
     @selected={{this.isSelected}}
     {{on 'click' (fn @onSortChange @value @name)}}
+    ...attributes
   >
     {{#if (has-block)}}
       {{yield}}
