--- a/toolkit/src/components/cut/filter-bar/sort/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/sort/index.hbs
@@ -10,6 +10,7 @@
         @icon='sort-desc'
         @text='Sort by: {{@config.sort.text}}'
         @color='secondary'
+        data-test-sort-button
       />
       {{yield
         (hash
@@ -29,6 +30,7 @@
       @icon='sort-desc'
       @text='Sort by: {{@config.sort.text}}'
       @color='secondary'
+      data-test-sort-button
     />
     {{yield
       (hash
