Update types to use unknown

--- a/toolkit/src/components/cut/filter-bar/sort-group.hbs
+++ b/toolkit/src/components/cut/filter-bar/sort-group.hbs
@@ -13,6 +13,7 @@
         applyFilter=@applyFilter
         isChecked=@isChecked
         config=@config
+        localConfig=@localConfig
       )
       Sort=(component
         'cut/filter-bar/sort'
